# ai-document-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: pyright.yml  ruff.yml  tests.yml
alembic/: env.py
alembic/versions/: d418bb6c48fe_create_documents_table.py  dbc9074b3c38_update_documents_table.py
app/: main.py
app/api/: documents.py
app/db/: session.py
app/models/: __init__.py  document.py
app/schemas/: document.py
app/services/: documents.py
tests/: conftest.py  test_documents.py  test_endpoints.py
